@@ -1,6 +1,7 @@
 package com.kotall.learn.java8.oom;
 
-import sun.misc.Unsafe;
+
+//import jdk.internal.misc.Unsafe;
 
 import java.lang.reflect.Field;
 
@@ -10,14 +11,14 @@ import java.lang.reflect.Field;
  */
 public class DirectMemoryOOM {
 
-    private static final int _1MB = 1024 * 1024;
-
-    public static void main(String[] args) throws Exception {
-        Field unsafeField = Unsafe.class.getDeclaredFields()[0];
-        unsafeField.setAccessible(true);
-        Unsafe unsafe = (Unsafe) unsafeField.get(null);
-        while (true) {
-            unsafe.allocateMemory(_1MB);
-        }
-    }
+//    private static final int _1MB = 1024 * 1024;
+//
+//    public static void main(String[] args) throws Exception {
+//        Field unsafeField = Unsafe.class.getDeclaredFields()[0];
+//        unsafeField.setAccessible(true);
+//        Unsafe unsafe = (Unsafe) unsafeField.get(null);
+//        while (true) {
+//            unsafe.allocateMemory(_1MB);
+//        }
+//    }
 }
